# fabric-private-chaincode

./: .travis.yml  Dockerfile  Makefile  config.mk  go.mod  go.sum
.github/workflows/: test.yml
common/: Makefile  error.h  logging.h
common/crypto/: CMakeLists.txt  Makefile
common/crypto/attestation-api/attestation/: attestation.cpp  attestation.h
common/crypto/attestation-api/evidence/: attestation_to_evidence.sh  verify-evidence.cpp  verify-evidence.h
common/crypto/attestation-api/scripts/: attestation_to_evidence.sh  enclave_to_mrenclave.sh  mrenclave.hex  poi.sh
common/crypto/attestation-api/test/: CMakeLists.txt  attested_evidence_test.sh  test.cpp  test.sh
common/crypto/attestation-api/test/common/: test-utils.cpp
common/crypto/attestation-api/test/get_attestation_app/app/: main.cpp
common/crypto/attestation-api/test/get_attestation_app/enclave/: CMakeLists.txt  test_enclave.edl
common/crypto/attestation-api/test/trusted/app/: main.cpp
common/crypto/attestation-api/test/trusted/enclave/: CMakeLists.txt  enclave_sign.pem  test.cpp
common/crypto/attestation-api/test/verify_evidence_app/: test.cpp
common/crypto/evidence/: attestation_to_evidence.sh  verify-evidence.c  verify-evidence.h
common/crypto/test/: CMakeLists.txt  test.cpp
common/enclave/: attestation.cpp  attestation.edl  attestation.h  cc_data.cpp  cc_data.h  cc_parameters.cpp  cc_parameters.h  common-output.edl  common.cpp  common.edl  key_ring.cpp  key_ring.h  report_data.cpp  report_data.h  shim_data.cpp  shim_data.h
common/logging/: CMakeLists.txt
common/logging/test/: CMakeLists.txt
common/protos/: .gitignore  Makefile  credentials.options  credentials.pb.c  credentials.pb.h  credentials.proto
common/protos/chaincode_enclave/: credentials.options  credentials.proto
common/sgxcclib/: attestation-ocalls.c  common-sgxcclib.c  common-sgxcclib.h
ecc/: Makefile  enclave_chaincode.go
ecc/enclave/: enclave_stub.go  enclave_stub_test.go
ecc_enclave/: Makefile
ecc_enclave/enclave/: CMakeLists-common-app-enclave.txt  CMakeLists.txt  CMakeVariables.txt  ctl.cpp  ctl.h  enclave.cpp  enclave.edl  shim.cpp  shim.h  shim_internals.cpp  shim_internals.h
ecc_enclave/sgxcclib/: CMakeLists.txt  sgxcclib.c  sgxcclib.h
ercc/: Dockerfile.ercc  Makefile  ercc.go  main.go
ercc/attestation/: CMakeLists.txt  Makefile
ercc/attestation/verify_ias_report/: CMakeLists.txt  verify-report.cpp  verify-report.h
ercc/registry/: registry.go
examples/battleship/: CMakeLists.txt  HOW-TO-RUN.txt  battleship_cc.cpp
examples/battleship/battleship-core/: battleship-core.cpp  battleship.h
examples/battleship/flask/: Makefile  battleship.py
examples/battleship/flask/templates/: battleship.html
integration/: auction_test.sh  battleship_invoke.sh  battleship_query.sh  battleship_start.sh  battleship_test.sh  deployment_test.sh  echo_test.sh
integration/config/: core.yaml  ias
protos/fpc/: attestation.proto  fpc.proto
samples/demos/irb/data-provider/service/: Makefile  main.go
samples/demos/irb/data-provider/service/pdf/: patient3.docx
samples/demos/irb/frontend/: Dockerfile
samples/demos/irb/principal-investigator/: README.md
tlcc_enclave/: Makefile
tlcc_enclave/enclave/: CMakeLists.txt  CMakeVariables.txt  ledger.cpp
tlcc_enclave/trusted_ledger/: CMakeLists.txt
utils/docker/: Makefile
utils/docker-compose/: README.md
utils/docker-compose/scripts/: teardown.sh
utils/docker-compose/scripts/lib/: common.sh
utils/docker/base-dev/: Dockerfile
utils/docker/dev/: Dockerfile
utils/docker/peer/: Dockerfile
